# pytest-djangoapp

./: .coveragerc  .gitignore  .landscape.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  index.md  quickstart.md  requirements.txt
docs/fixtures/: 001_settings.md  005_users.md  010_request.md  015_templates.md  020_db.md  025_migrations.md  030_messages.md  032_admin.md  033_signals.md  035_mail.md  040_commands.md  045_live.md  100_utils.md
docs/source/: conf.py  fixtures.rst  fixtures_commands.rst  fixtures_db.rst  fixtures_live.rst  fixtures_mail.rst  fixtures_messages.rst  fixtures_migrations.rst  fixtures_request.rst  fixtures_settings.rst  fixtures_templates.rst  fixtures_users.rst  fixtures_utils.rst  index.rst  quickstart.rst
pytest_djangoapp/: __init__.py  compat.py  configuration.py  plugin.py  toolbox.py
pytest_djangoapp/fixtures/: __init__.py  commands.py  db.py  live.py  mail.py  messages.py  migrations.py  request.py  settings.py  templates.py  urls.py  users.py  utils.py
pytest_djangoapp/tests/: conftest.py  settings_project.py  test_configuration.py  test_etc.py  test_fixtures_commands.py  test_fixtures_live.py  test_fixtures_mail.py  test_fixtures_messages.py  test_fixtures_migrations.py  test_fixtures_request.py  test_fixtures_settings.py  test_fixtures_templates.py  test_fixtures_users.py  test_models.py  test_module.py
pytest_djangoapp/tests/testapp/: urls.py
pytest_djangoapp/tests/testapp/management/commands/: my_command.py
pytest_djangoapp/tests/testapp/migrations/: 0001_initial.py
pytest_djangoapp/tests/testapp_missing_migrations/: models.py
src/pytest_djangoapp/: __init__.py  compat.py  configuration.py  exceptions.py  plugin.py  toolbox.py
src/pytest_djangoapp/fixtures/: __init__.py  admin.py  commands.py  db.py  live.py  mail.py  messages.py  migrations.py  request.py  settings.py  signals.py  templates.py  users.py  utils.py
tests/: settings_project.py  test_configuration.py  test_etc.py  test_fixtures_admin.py  test_fixtures_commands.py  test_fixtures_messages.py  test_fixtures_migrations.py  test_fixtures_request.py  test_fixtures_settings.py  test_fixtures_signals.py  test_fixtures_users.py  test_fixtures_utils.py  test_models.py
tests/testapp/: admin.py  models.py  urls.py
tests/testapp/management/commands/: compat.py  my_command.py
